<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spo2 </string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Spo2 Monitor</string>
    <string name="title_screen_main">Spo2 Menu</string>
    <string name="connect">Connect</string>
    <string name="options">Options</string>
    <string name="help">Guide</string>
    <string name="credits">Credits</string>
    <string name="bt_not_available">Bluetooth is not available</string>
    <string name="connected">connected</string>
    <string name="not_connected">not connected</string>
    <string name="connecting">connecting</string>
    <string name="bt_not_enabled">Bluetooth could not get enabled</string>
    <string name="connect_to_ecg">Connect to ECG</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="language">Language</string>
    <string name="profiles">Profiles</string>
    <string name="alarm">Alarm</string>
    <string name="title_options">Options</string>
    <string name="title_credits">Credits</string>
    <string name="title_language">Select Language</string>
    <string name="title_activity_help">Help</string>
    <string name="credits_text">Project Team\n\n <b>Project Guides:\n  
Dr. U. M. Chaskar\n
Dept. of Instrumentation and Control\n
Coep Pune</b>\n\n\n <b>Hardware Support:</b>\n\n
Malay Soni\n\n\n <b>Software Support:</b>\n\n
Deepak Singh\n</string>
    <string name="title_activity_txt_writer">TxtWriter</string>
    <string name="autoconnect_on">autoconnect enabled</string>
    <string name="autoconnect_off">autoconnect disabled</string>
    <string name="connected_to">connected to</string>
    <string name="unable_connect">Unable to connect to Multi Para Device</string>
    <string name="connection_lost">Connection to Spo2 Device was lost</string>
    <string name="action_settings">Settings</string>
    <string name="spo2_help_text"><b>SPO2 Guide</b>\n\nOpen the clamp of the Pulse Oximeter PO3, then place your middle, 
        ring or index finger of your left hand into the opening of the oximeter with nail side down, 
        as pictured.\n On the front panel, press the “Start” button once to turn the oximeter on.\n</string>
    <string name="title_activity_spo2_start">Oxygen Saturation Monitor</string>
    <string name="screenshot">Screenshot</string>
    <string name="temperature">Temperature</string>
    <string name="oxygen_saturation">Oxygen \nSaturation</string>
    <string name="email">Email</string>
    <string name="title_activity_mail">Mail</string>
    
    <string name="header">Complete the fields to send an email</string>
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="message_body">Message body</string>
    <string name="compose">Compose</string>

</resources>